Some bug fixes and initial training code.