@@ -7,12 +7,14 @@ version = '1.3'
 mainClassName = 'edu.emory.mathcs.clir.relextract.RelationExtractionApp'
 //mainClassName = 'edu.emory.mathcs.clir.relextract.tools.FreebaseLexiconLuceneIndexBuilder'
 
-applicationDefaultJvmArgs = ["-Xmx220g",
+//applicationDefaultJvmArgs = ["-Xmx30g"]
+
+applicationDefaultJvmArgs = ["-Xmx150g",
                              "-XX:+UseParallelGC",
                              "-XX:+UseParallelOldGC",
                              "-XX:+UseAdaptiveSizePolicy",
-                             "-XX:+AggressiveHeap",
-                             "-XX:PermSize=10g"]
+                             "-XX:+AggressiveHeap"
+]
 
 //applicationDefaultJvmArgs = ["-Xmx220g",
 //                             "-XX:+UseParNewGC",
@@ -41,6 +43,7 @@ buildscript {
 }
 
 dependencies {
+    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.6.11'
     compile name: 'stanford-srparser-2014-08-28-models'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '4.10.1'
     compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '4.10.1'
